Uptime-Kuma/app.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: uptime-kuma
spec:
  replicas: 3
  selector:
    matchLabels:
      app: uptime-kuma
  serviceName: uptime-kuma
  template:
    metadata:
      labels:
        app: uptime-kuma
    spec:
      containers:
      - name: uptime-kuma
        image: louislam/uptime-kuma:1
        ports:
        - containerPort: 3001
        volumeMounts:
        - name: uptime-kuma
          mountPath: /app/data
  volumeClaimTemplates:
  - metadata:
      name: uptime-kuma
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 1Gi
