Uptime-Kuma/uptime-kuma.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: uptime-kuma
spec:
  replicas: 1
  selector:
    matchLabels:
      app: uptime-kuma
  template:
    metadata:
      labels:
        app: uptime-kuma
    spec:
      containers:
      - name: uptime-kuma
        image: louislam/uptime-kuma:1
        ports:
        - containerPort: 3001
        volumeMounts:
        - name: uptime-kuma
          mountPath: /app/data
      volumes:
      - name: uptime-kuma
        persistentVolumeClaim:
          claimName: uptime-kuma
---
apiVersion: v1
kind: Service
metadata:
  name: uptime-kuma
spec:
  selector:
    app: uptime-kuma
  ports:
  - name: http
    port: 3001
    targetPort: 3001
    nodePort: 31000
  type: NodePort
