Uptime-Kuma/ingress.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: uptime-kuma-ingress
  namespace: uptime-kuma
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`uptime.myhomelab.fr`)
      kind: Rule
      services:
        - name: uptime-kuma
          port: 3001
  tls:
    secretName: myhomelab-fr-productions-tls
